--- a/readme.html
+++ b/readme.html
@@ -1,5 +1,30 @@
 <h1>MopScreens</h1>
 Large event results display for MeOS
+<h3>2016-05-04 Version used for French Clubs Championship</h3>
+<h4>What's New ?</h4>
+[x] Rows height have been decreased in order to stack more lines on the screen<br/>
+[x] Support for slideshow
+[x] Support for micro blogging (not connected to standard blogging software)
+[x] Suport for homemade radio system (based on LoRa technology) with real time radio quality and battery level display superimposed on map. Ask for details.
+[x] Allows CSS selection on a screen by screen basis to match caracteristics of screens (ex adapt rows height)
+[x] Partial support of GECO software.
+<h4>Known bugs</h4>
+[ ] Multistages competition are not correctly handled (no cumulative time)
+[ ] Documentation is no more up to date, but still help.
+<h4>Missing features</h4>
+See below.
+<h3>2016-04-04 Relay extended to 10</h3>
+<h4>What's New ?</h4>
+NOTE : Database tables structure have been altered. If you are updating an existing version, please ask for support.
+[x] Relay extended up to 10 team members
+[x] Screens can now be divided in two, three or four panels for non relay competitions
+[x] MP, DNF etc... translation
+[x] Support for experimental radio transmitted punches improved. Ask for details if interested.
+<h4>Known bugs</h4>
+[ ] Documentation is no more up to date, but still help.
+<h4>Missing features</h4>
+[ ] Add multilines scrolling
+[ ] Allow course based instead of class based display (may require some changes in MeOS)
 <h3>2015-11-08 Picture files management and internationalisation</h3>
 <h4>What's New ?</h4>
 [x] It's now possible from screenconfig.php to upload pictures and html files to their respective directories and to manage them.<br/>
