--- a/htmlfiles/exemple.html
+++ b/htmlfiles/exemple.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-        <title>CFCO 2014 (page2)</title>
+        <title>MopScreens HTML example</title>
         <link rel="stylesheet" type="text/css" href="htmlfiles/co2014.css" />
     </head>
     <body>
