--- a/readme.html
+++ b/readme.html
@@ -1,30 +1,65 @@
 <h1>MopScreens</h1>
 Large event results display for MeOS
+<h2>Description</h2>
+MopScreens is a set of php files to be used on a web server (mainly a local one) to display large event results in real time in an O'Ringen like style.<br/>
+It uses MeOS Online Protocol for data updating, and reuse part of the Mop example provided with MeOS.<br/>
+
+Currently it can handle 18 screens, but can be extended to more screens very easily, just modifying a constant.<br/>
+
+To get a better idea of what it looks like, have a look to the (obsolete) english documentation MeOSScreensEn.pdf<br/>
+
+It is provided "as is" as open source code and can be freely used, modified, enhenced and distributed. It is licensed in the same conditions as MeOS.<br/>
+<h2> What's new ?</h2>
+<h3>2017-12-21 Small fixes</h3>
+[x] On GitHub, pdf.png in img directory is now in lowercase<br/>
+[x] Replacing 192.168.0.10 by <i><ToBeDefined></i> in index.html and index.php in all subdirectories<br/>
+[x] Add index.html and index.php in <i>slides</i> subdirectory in order for this directory to be created on download from GitHub<br/>
+[x] Improve recovering from bad situations in case of LoRa receiver unexpected disconnect<br />
+[x] Add first available competition ID on index page<br/>
+<h3>2017-11-16 Alternate 3 panels display</h3>
+[x] Add an alternate display format for 3 panels results display with radio replacing club names.<br/>
+[x] Radio sendpunch Python script improvement : automatic restart if radio is disconnected and replugged<br/>
+<h3>2017-07-23 Start time bug fix</h3>
+[x] Fix bug in start time display (use of mysqli instead of mysql with newer version of php)<br/>
+<h3>2017-05-17 Quote bug fixed</h3>
+[x] Fix bug dealing with quotes in names (mainly in class names and team names).<br/>
+[x] Fix start list time table timezone issue<br/>
+[x] Fix start list number of fixed lines<br/>
+[x] Changes in Readme organisation and merge bugfix branch into master<br/>
+<h3>2017-03-15 Version planned to be used for Nationale Sud Est orienteering race on 2017 march the 18th</h3>
+[x] Fix bugs introduced in original results display show.php (still used for public WiFi diffusion of results on the arena)<br/>
+[x] Fix undefined variables in different php files avoiding Apache error/warning generation in Apache error log file. The error file could grow as large as many hundreds of mega bytes due to warning generation during races ! That slow seriousely the server down for large events.<br/>
+[x] Separate log files from picture file in file management lists<br/>
+[x] Some other cosmetic changes in code.<br/>
+<h3> 2016-11-07 Version planned to be used for PACA night orienteering on November the 19th</h3>
+[x] Better support of 1, 2, 3 and 4 panels modes<br/>
+[x] Up to 15 radio controls supported (in 1 panel mode individual race)<br/>
+[x] Better suport for homemade radio system (based on LoRa technology) with real time radio quality and battery level display superimposed on map. Ask for details.<br/>
 <h3>2016-05-04 Version used for French Clubs Championship</h3>
 <h4>What's New ?</h4>
 [x] Rows height have been decreased in order to stack more lines on the screen<br/>
-[x] Support for slideshow
-[x] Support for micro blogging (not connected to standard blogging software)
-[x] Suport for homemade radio system (based on LoRa technology) with real time radio quality and battery level display superimposed on map. Ask for details.
-[x] Allows CSS selection on a screen by screen basis to match caracteristics of screens (ex adapt rows height)
-[x] Partial support of GECO software.
+[x] Support for slideshow<br/>
+[x] Support for micro blogging (not connected to standard blogging software)<br/>
+[x] Suport for homemade radio system (based on LoRa technology) with real time radio quality and battery level display superimposed on map. Ask for details.<br/>
+[x] Allows CSS selection on a screen by screen basis to match caracteristics of screens (ex adapt rows height)<br/>
+[x] Partial support of GECO software.<br/>
 <h4>Known bugs</h4>
-[ ] Multistages competition are not correctly handled (no cumulative time)
-[ ] Documentation is no more up to date, but still help.
+[ ] Multistages competition are not correctly handled (no cumulative time)<br/>
+[ ] Documentation is no more up to date, but still help.<br/>
 <h4>Missing features</h4>
-See below.
+See below.<br/>
 <h3>2016-04-04 Relay extended to 10</h3>
 <h4>What's New ?</h4>
-NOTE : Database tables structure have been altered. If you are updating an existing version, please ask for support.
-[x] Relay extended up to 10 team members
-[x] Screens can now be divided in two, three or four panels for non relay competitions
-[x] MP, DNF etc... translation
-[x] Support for experimental radio transmitted punches improved. Ask for details if interested.
+NOTE : Database tables structure have been altered. If you are updating an existing version, please ask for support.<br/>
+[x] Relay extended up to 10 team members<br/>
+[x] Screens can now be divided in two, three or four panels for non relay competitions<br/>
+[x] MP, DNF etc... translation<br/>
+[x] Support for experimental radio transmitted punches improved. Ask for details if interested.<br/>
 <h4>Known bugs</h4>
-[ ] Documentation is no more up to date, but still help.
+[ ] Documentation is no more up to date, but still help.<br/>
 <h4>Missing features</h4>
-[ ] Add multilines scrolling
-[ ] Allow course based instead of class based display (may require some changes in MeOS)
+[ ] Add multilines scrolling<br/>
+[ ] Allow course based instead of class based display (may require some changes in MeOS)<br/>
 <h3>2015-11-08 Picture files management and internationalisation</h3>
 <h4>What's New ?</h4>
 [x] It's now possible from screenconfig.php to upload pictures and html files to their respective directories and to manage them.<br/>
@@ -48,8 +83,3 @@ NOTE : Database tables structure have been altered. If you are updating an exist
 <h3>2015-09-13 Version used by CSP Orienteering club</h3>
 <h4>What's New ?</h4>
 [x] Includes a temporary fix of the lost of class allocation on MeOS service restart.<br/>
-<h2>Description</h2>
-MopScreens is a set of php files to be used on a web server (mainly a local one) to display large event results in real time in an O'Ringen like style. It uses MeOS Online Protocol for data updating, and reuse part of the Mop example provided with MeOS.<br/>
-Currently it can handle 12 screens, but can be extended to more screens very easily. Main limitation concerns relay : currently the team is limited to 3 members and to 3 radio controls per leg. The limitation in team size will be increased to 10 members within the next 6 months.<br/>
-To get a better idea of what it looks like, have a look to the english documentation MeOSScreensEn.pdf<br/>
-It is provided "as is" as open source code and can be freely used, modified, enhenced and distributed. It is licensed in the same condition as MeOS.<br/>
