Relay bug fixed

--- a/readme.html
+++ b/readme.html
@@ -11,6 +11,8 @@ To get a better idea of what it looks like, have a look to the (obsolete) englis
 It is provided "as is" as open source code and can be freely used, modified, enhenced and distributed. It is licensed in the same conditions as MeOS.<br/>
 <h2> What's new ?</h2>
 
+<h3> 2019-12-30 Relay bug fixed</h3>
+[x] Fix relay related bug introduced with flag support in july
 
 <h3> 2019-07-24 Multistages events support</h3>
 NOTE : Database tables structure have been altered. On existanig installation, please run mysql_update_20190620.php <b>once</b>.<br/>
